--- a/ged_gphy/web/index.xhtml
+++ b/ged_gphy/web/index.xhtml
@@ -1,14 +1,26 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:p="http://primefaces.org/ui">
     <h:head>
-        <title>Facelet Title</title>
+        <title>TROLL GED</title>
     </h:head>
     <h:body>
-        Hello from Facelets
-        <br />
-        <h:link outcome="welcomePrimefaces" value="Primefaces welcome page" />
+
+        <p:growl showDetail="true" sticky="false"/>
+        <p:panel header="Entrer votre LOGIN et votre Mot de passe" style="alignment-baseline: central">
+            <h:form>
+
+                <h:panelGrid columns="2" style="margin:  auto  auto">
+                    <label for="login" >Login:</label>
+                    <p:inputText value="#{UtilisateurController.utilisateur.login}" required="true" label="login"/>
+                    <label for="password" >Password:</label>
+                    <p:inputText value="#{UtilisateurController.utilisateur.password}" required="true" label="password" type="password"/>
+                </h:panelGrid>
+                <p:commandButton value="Valider" action="#{UtilisateurController.affiche()}" ajax="false" style="margin:  auto  auto"/>
+
+            </h:form>
+        </p:panel>
     </h:body>
 </html>
-
